--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.9.1",
     "morgan": "~1.9.1",
     "socket.io": "^4.5.4"
   },
